--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <!--标题栏-->
+    <include layout="@layout/titlebar" />
 
-</android.support.constraint.ConstraintLayout>
+    <!--FrameLayout-->
+    <FrameLayout
+        android:id="@+id/fl_content"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+
+    <!--底部的Button-->
+    <RadioGroup
+        android:id="@+id/rg_main"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#11000000"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:padding="5dp">
+
+        <RadioButton
+            android:id="@+id/rb_common_frame"
+            style="@style/bottom_tag_style"
+            android:drawableTop="@drawable/rb_common_frame_drawale_selector"
+            android:text="常用框架" />
+
+        <RadioButton
+            android:id="@+id/rb_thirdparty"
+            style="@style/bottom_tag_style"
+            android:drawableTop="@drawable/rb_thirdparty_drawale_selector"
+            android:text="第三方" />
+
+        <RadioButton
+            android:id="@+id/rb_custom"
+            style="@style/bottom_tag_style"
+            android:drawableTop="@drawable/rb_custom_drawale_selector"
+            android:text="自定义" />
+
+        <RadioButton
+            android:id="@+id/rb_other"
+            style="@style/bottom_tag_style"
+            android:drawableTop="@drawable/rb_other_drawale_selector"
+            android:text="其他" />
+
+    </RadioGroup>
+
+</LinearLayout>
