【尚硅谷】【第一讲：Android软件框架搭建】【去除RadioButton点击时的阴影效果】

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,6 +14,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">1</item>
         <item name="android:button">@android:color/transparent</item>
+        <item name="android:background">@android:color/transparent</item>
         <item name="android:drawablePadding">3dp</item>
         <item name="android:gravity">center</item>
         <item name="android:textColor">@drawable/bottom_textcolor_drawable_selector</item>
