--- a/app/src/main/res/layout/titlebar.xml
+++ b/app/src/main/res/layout/titlebar.xml
@@ -7,9 +7,10 @@
     android:orientation="horizontal">
 
     <TextView
+        android:id="@+id/txt_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="尚硅谷知识库"
+        android:text="Android知识库"
         android:textColor="@android:color/white"
         android:textSize="20sp" />
 
