【尚硅谷】【第三讲：Json数据解析】【1、为四个Button添加点击事件的监听；2、抽取代中的String文件，减少硬编码】

--- a/app/src/main/res/layout/activity_native_json_parse.xml
+++ b/app/src/main/res/layout/activity_native_json_parse.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:text="将Json对象转换为Java对象"
+        android:text="@string/json_btn_javaobject"
         android:textAllCaps="false"
         android:textSize="18sp" />
 
@@ -22,7 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:text="将Json数组转换为Java集合"
+        android:text="@string/json_btn_javalist"
         android:textAllCaps="false"
         android:textSize="18sp" />
 
@@ -31,7 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:text="复杂Json数据解析"
+        android:text="@string/json_btn_complex"
         android:textAllCaps="false"
         android:textSize="18sp" />
 
@@ -40,7 +40,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:text="特殊Json数据解析"
+        android:text="@string/json_btn_special"
         android:textAllCaps="false"
         android:textSize="18sp" />
 
@@ -48,7 +48,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:text="原始数据"
+        android:text="@string/json_txt_original"
         android:textColor="@android:color/holo_blue_bright"
         android:textSize="18sp" />
 
@@ -64,7 +64,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:text="转换后的数据"
+        android:text="@string/json_txt_last"
         android:textColor="@android:color/holo_blue_bright"
         android:textSize="18sp" />
 
