【尚硅谷】【第三讲：Json数据解析】【JSON解析 将 JSON 格式的字符串转换为 Java 对象】

--- a/app/src/main/res/layout/activity_launcher.xml
+++ b/app/src/main/res/layout/activity_launcher.xml
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/iv_icon"
         android:layout_centerHorizontal="true"
-        android:text="尚硅谷Android世界。。。"
+        android:text="@string/launcer_txt_description"
         android:textColor="@android:color/black"
         android:textSize="20sp" />
 </RelativeLayout>
