【尚硅谷】【第三讲：Json数据解析】【将 JSON 格式的字符串数组转换为 List】

--- a/app/src/main/res/layout/activity_native_json_parse.xml
+++ b/app/src/main/res/layout/activity_native_json_parse.xml
@@ -44,36 +44,52 @@
         android:textAllCaps="false"
         android:textSize="18sp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:text="@string/json_txt_original"
-        android:textColor="@android:color/holo_blue_bright"
-        android:textSize="18sp" />
-
-    <TextView
-        android:id="@+id/txt_original"
+    <ScrollView
+        android:id="@+id/scroll_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:textSize="18sp" />
+        android:layout_height="match_parent"
+        android:overScrollMode="never"
+        android:scrollbars="none">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:text="@string/json_txt_last"
-        android:textColor="@android:color/holo_blue_bright"
-        android:textSize="18sp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/txt_last"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:textSize="18sp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:text="@string/json_txt_original"
+                android:textColor="@android:color/holo_blue_bright"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/txt_original"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:textSize="18sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:text="@string/json_txt_last"
+                android:textColor="@android:color/holo_blue_bright"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/txt_last"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:textSize="18sp" />
+
+        </LinearLayout>
+
+    </ScrollView>
 
 </LinearLayout>
