--- a/app/src/main/res/layout/activity_fast_json_parse.xml
+++ b/app/src/main/res/layout/activity_fast_json_parse.xml
@@ -10,39 +10,23 @@
 
     <Button
         android:id="@+id/btn_json_to_java"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:text="@string/fastjson_btn_jsontojava"
-        android:textAllCaps="false"
-        android:textSize="18sp" />
+        style="@style/button_style"
+        android:text="@string/fastjson_btn_jsontojava" />
 
     <Button
         android:id="@+id/btn_jsonarray_to_javalist"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:text="@string/fastjson_btn_jsonarraytojavalist"
-        android:textAllCaps="false"
-        android:textSize="18sp" />
+        style="@style/button_style"
+        android:text="@string/fastjson_btn_jsonarraytojavalist" />
 
     <Button
         android:id="@+id/btn_fastjson_java_to_json"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:text="@string/fastjson_btn_javatojson"
-        android:textAllCaps="false"
-        android:textSize="18sp" />
+        style="@style/button_style"
+        android:text="@string/fastjson_btn_javatojson" />
 
     <Button
         android:id="@+id/btn_fastjson_javalist_to_jsonarray"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:text="@string/fastjson_btn_javalisttojsonarray"
-        android:textAllCaps="false"
-        android:textSize="18sp" />
+        style="@style/button_style"
+        android:text="@string/fastjson_btn_javalisttojsonarray" />
 
     <ScrollView
         android:layout_width="match_parent"
