--- a/app/src/main/res/layout/activity_gson_parse.xml
+++ b/app/src/main/res/layout/activity_gson_parse.xml
@@ -10,39 +10,23 @@
 
     <Button
         android:id="@+id/btn_json_to_javaobject"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:text="@string/json_btn_javaobject"
-        android:textAllCaps="false"
-        android:textSize="18sp" />
+        style="@style/button_style"
+        android:text="@string/json_btn_javaobject" />
 
     <Button
         android:id="@+id/btn_jsonarray_to_javalist"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:text="@string/json_btn_javalist"
-        android:textAllCaps="false"
-        android:textSize="18sp" />
+        style="@style/button_style"
+        android:text="@string/json_btn_javalist" />
 
     <Button
         android:id="@+id/btn_gson_java_to_jsonobject"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:text="@string/gson_btn_java_to_jsonobject"
-        android:textAllCaps="false"
-        android:textSize="18sp" />
+        style="@style/button_style"
+        android:text="@string/gson_btn_java_to_jsonobject" />
 
     <Button
         android:id="@+id/btn_gson_java_to_jsonarray"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:text="@string/gson_btn_java_to_jsonarray"
-        android:textAllCaps="false"
-        android:textSize="18sp" />
+        style="@style/button_style"
+        android:text="@string/gson_btn_java_to_jsonarray" />
 
     <ScrollView
         android:layout_width="match_parent"
