--- a/app/src/main/res/layout/activity_xutils3_net.xml
+++ b/app/src/main/res/layout/activity_xutils3_net.xml
@@ -23,17 +23,32 @@
         style="@style/button_style"
         android:text="@string/net_btn_upload" />
 
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="5dp"
-        android:text="@string/net_txt_display"
-        android:textSize="18sp" />
+        android:layout_height="wrap_content">
 
-    <ProgressBar
-        android:id="@+id/progressbar"
-        style="?android:progressBarStyleHorizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/txt_display"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="5dp"
+                android:text="@string/net_txt_display"
+                android:textSize="18sp" />
+
+            <ProgressBar
+                android:id="@+id/progressbar"
+                style="?android:progressBarStyleHorizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
+    </ScrollView>
+
 
 </LinearLayout>
