--- a/app/src/main/res/layout/activity_xutils3_net.xml
+++ b/app/src/main/res/layout/activity_xutils3_net.xml
@@ -28,6 +28,7 @@
         android:layout_height="wrap_content">
 
         <LinearLayout
+            android:id="@+id/ll_display"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
