--- a/app/src/main/res/layout/activity_glide_base.xml
+++ b/app/src/main/res/layout/activity_glide_base.xml
@@ -1,9 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".glide.activity.GlideBaseActivity">
+    android:orientation="vertical">
 
-</android.support.constraint.ConstraintLayout>
+    <include layout="@layout/titlebar" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/txt_glide_1"
+                style="@style/glide_textview_style" />
+
+            <ImageView
+                android:id="@+id/img_glide_1"
+                style="@style/glide_imageview_style" />
+
+            <TextView
+                android:id="@+id/txt_glide_2"
+                style="@style/glide_textview_style" />
+
+            <ImageView
+                android:id="@+id/img_glide_2"
+                style="@style/glide_imageview_style" />
+
+            <TextView
+                android:id="@+id/txt_glide_3"
+                style="@style/glide_textview_style" />
+
+            <ImageView
+                android:id="@+id/img_glide_3"
+                style="@style/glide_imageview_style" />
+
+            <TextView
+                android:id="@+id/txt_glide_4"
+                style="@style/glide_textview_style" />
+
+            <ImageView
+                android:id="@+id/img_glide_4"
+                style="@style/glide_imageview_style" />
+
+            <TextView
+                android:id="@+id/txt_glide_5"
+                style="@style/glide_textview_style" />
+
+            <ImageView
+                android:id="@+id/img_glide_5"
+                style="@style/glide_imageview_style" />
+
+            <TextView
+                android:id="@+id/txt_glide_6"
+                style="@style/glide_textview_style" />
+
+            <ImageView
+                android:id="@+id/img_glide_6"
+                style="@style/glide_imageview_style" />
+
+            <TextView
+                android:id="@+id/txt_glide_7"
+                style="@style/glide_textview_style" />
+
+            <ImageView
+                android:id="@+id/img_glide_7"
+                style="@style/glide_imageview_style" />
+
+            <TextView
+                android:id="@+id/txt_glide_8"
+                style="@style/glide_textview_style" />
+
+            <ImageView
+                android:id="@+id/img_glide_8"
+                style="@style/glide_imageview_style" />
+
+            <TextView
+                android:id="@+id/txt_glide_9"
+                style="@style/glide_textview_style" />
+
+            <ImageView
+                android:id="@+id/img_glide_9"
+                style="@style/glide_imageview_style" />
+        </LinearLayout>
+
+    </ScrollView>
+</LinearLayout>
